build-deploy/kubernetes/scolr-service.yaml
kind: Service
apiVersion: v1
metadata:  
  name: scolr
spec:
  ports:    
    - name: scolr
      protocol: TCP
      port: 8080
      targetPort: 8080    
  selector:
    app: scolr
